<resources>
    <string name="app_name">ChattingApp</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


    <string name="name">Enter Name</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="we_have_sent_you_an_otp_n_for_phone_number_verification">We have sent you an OTP \n for phone number verification</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="working">Working . . .</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="please_enter_your_details_and_phone_number_for_verification">Please enter your Details and Phone number for verification</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Enter phone Number</string>
    <string name="verify_phone">Verify phone</string>
    <string name="phone_no">+91 %s</string>
</resources>